// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexedFieldsTable should filter based on the query bar 1`] = `
<div>
  <Table
    editField={[Function]}
    indexPattern={
      Object {
        "getNonScriptedFields": [Function],
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 0,
            "size": 10,
          },
          "sort": Object {
            "direction": "asc",
            "field": "displayName",
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "displayName": "Elastic",
              "excluded": false,
              "format": undefined,
              "indexPattern": undefined,
              "name": "Elastic",
              "routes": undefined,
              "searchable": true,
            },
          ],
          "totalRecordCount": 1,
        },
      }
    }
    onDataCriteriaChange={[Function]}
  />
</div>
`;

exports[`IndexedFieldsTable should filter based on the type filter 1`] = `
<div>
  <Table
    editField={[Function]}
    indexPattern={
      Object {
        "getNonScriptedFields": [Function],
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 0,
            "size": 10,
          },
          "sort": Object {
            "direction": "asc",
            "field": "displayName",
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "displayName": "timestamp",
              "excluded": false,
              "format": undefined,
              "indexPattern": undefined,
              "name": "timestamp",
              "routes": undefined,
              "type": "date",
            },
          ],
          "totalRecordCount": 1,
        },
      }
    }
    onDataCriteriaChange={[Function]}
  />
</div>
`;

exports[`IndexedFieldsTable should render normally 1`] = `
<div>
  <Table
    editField={[Function]}
    indexPattern={
      Object {
        "getNonScriptedFields": [Function],
      }
    }
    model={
      Object {
        "criteria": Object {
          "page": Object {
            "index": 0,
            "size": 10,
          },
          "sort": Object {
            "direction": "asc",
            "field": "displayName",
          },
        },
        "data": Object {
          "records": Array [
            Object {
              "displayName": "Elastic",
              "excluded": false,
              "format": undefined,
              "indexPattern": undefined,
              "name": "Elastic",
              "routes": undefined,
              "searchable": true,
            },
            Object {
              "displayName": "timestamp",
              "excluded": false,
              "format": undefined,
              "indexPattern": undefined,
              "name": "timestamp",
              "routes": undefined,
              "type": "date",
            },
            Object {
              "displayName": "conflictingField",
              "excluded": false,
              "format": undefined,
              "indexPattern": undefined,
              "name": "conflictingField",
              "routes": undefined,
              "type": "conflict",
            },
          ],
          "totalRecordCount": 3,
        },
      }
    }
    onDataCriteriaChange={[Function]}
  />
</div>
`;
